# chrysalis

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  RELEASE.md  chrysalis.toml  chrysalis.yaml  install.ps1  install.sh
.github/workflows/: release.yml  test.yml
crates/chrysalis-cli/: Cargo.toml
crates/chrysalis-cli/src/: cli.rs  logger.rs  main.rs
crates/chrysalis-cli/src/commands/: build.rs  clean.rs  init.rs  mod.rs
crates/chrysalis-config/: Cargo.toml
crates/chrysalis-config/src/: build.rs  config.rs  env.rs  env_loader.rs  error.rs  flutter.rs  lib.rs  platform.rs  platforms.rs  plugins.rs  project.rs  tests.rs  web.rs
crates/chrysalis-core/: Cargo.toml
crates/chrysalis-core/src/: context.rs  error.rs  file_info.rs  file_naming.rs  lib.rs  scanner.rs  stats.rs  utils.rs
crates/chrysalis-flutter/: Cargo.toml
crates/chrysalis-flutter/src/: error.rs  executor.rs  lib.rs  validator.rs
crates/chrysalis-plugins/: Cargo.toml
crates/chrysalis-plugins/src/: chunk.rs  error.rs  hash.rs  inject.rs  lib.rs  plugin.rs
crates/chrysalis-plugins/src/minify/: css.rs  html.rs  js.rs  json.rs  mod.rs
