[workspace]
resolver = "2"
members = [
    "crates/chrysalis-cli",
    "crates/chrysalis-core",
    "crates/chrysalis-config",
    "crates/chrysalis-plugins",
    "crates/chrysalis-flutter",
]

[workspace.package]
version = "1.0.0"
edition = "2024"

[workspace.dependencies]
# CLI and configuration
clap = { version = "4.5", features = ["derive", "cargo"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Error handling and logging
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Async runtime
tokio = { version = "1.40", features = ["full"] }

# File system and I/O
walkdir = "2.5"
glob = "0.3"
pathdiff = "0.2"

# Hashing
md5 = "0.7"
sha2 = "0.10"

# Minification and optimization
# Note: SWC has dramatically changed its version numbering scheme
# Version 55+ is compatible with latest serde
swc_core = { version = "55", features = ["common", "ecma_ast", "ecma_parser", "ecma_codegen", "ecma_minifier"] }
lightningcss = { version = "1.0.0-alpha.70", features = ["bundler"] }
minify-html = "0.15"

# Progress and UI
indicatif = "0.17"
console = "0.15"

# Template engine
tera = "1.20"

# Process execution
which = "6.0"

# System info
num_cpus = "1.16"

# Async trait
async-trait = "0.1"

# Environment variable loading
dotenvy = "0.15"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"

[profile.dev]
opt-level = 0
debug = true

[profile.dev.package."*"]
opt-level = 2
