[package]
name = "chrysalis-config"
version.workspace = true
edition.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
anyhow.workspace = true
thiserror.workspace = true
num_cpus.workspace = true
tracing.workspace = true
dotenvy.workspace = true

[dev-dependencies]
tempfile = "3.10"
