[package]
name = "chrysalis-core"
version.workspace = true
edition.workspace = true

[dependencies]
chrysalis-config = { path = "../chrysalis-config" }

anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
walkdir.workspace = true
glob.workspace = true
pathdiff.workspace = true
md5.workspace = true
sha2.workspace = true
tokio.workspace = true

[dev-dependencies]
tempfile = "3.10"
