[package]
name = "chrysalis-flutter"
version.workspace = true
edition.workspace = true

[dependencies]
chrysalis-config = { path = "../chrysalis-config" }

anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
tokio.workspace = true
which.workspace = true
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
tempfile = "3.10"
