[package]
name = "chrysalis-plugins"
version.workspace = true
edition.workspace = true

[dependencies]
chrysalis-core = { path = "../chrysalis-core" }
chrysalis-config = { path = "../chrysalis-config" }

anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tera.workspace = true
async-trait.workspace = true
pathdiff.workspace = true
glob.workspace = true

# Minification
swc_core.workspace = true
lightningcss.workspace = true
minify-html.workspace = true

[dev-dependencies]
tempfile = "3.10"
